Added stuff before reset

--- a/home/config/i3/i3blocks.conf
+++ b/home/config/i3/i3blocks.conf
@@ -1,52 +1,99 @@
-# i3blocks config file
-
 # Global properties
-command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=20
 markup=none
 
-[sshd]
-label=☣
-interval=1
-separator=true
-command=~/.config/i3/scripts/sshd-status.sh
+# Blocks
+[arch-update]
+command=~/repos/i3blocks-contrib/arch-update/arch-update | sed 's/updates available/🆙/'
+interval=3600
+markup=pango
+QUIET=true
+BASE_COL=#f8f8f2
+UPDATE_COL=#f92672
 
-[volume]
-label=♫
-instance=Master
-interval=1
-signal=10
-
-[brightness]
-interval=1
-separator=true
-command=~/.config/i3/scripts/brightness.sh
-
+[cpu_usage-label]
+full_text=☢
+separator=false
+separator_block_width=5
 [cpu_usage]
-label=☢
 interval=3
+command=~/repos/i3blocks-contrib/cpu_usage/cpu_usage
 
+[ram-label]
+full_text=☷
+separator=false
+separator_block_width=5
 [ram]
-label=☷
 separator=true
 interval=10
-command=free | awk 'FNR == 2 { printf "%.1fG", $3/1024/1024 }'
+command=~/repos/i3blocks-contrib/memory/memory
 
-[battery_thinkpad]
-label=⚡
-interval=45
-command=~/.config/i3/scripts/battery-status.sh
+[temperature-label]
+full_text=♨
+separator=false
+separator_block_width=5
+[temperature]
+interval=10
+command=~/repos/i3blocks-contrib/temperature/temperature
+
+[disk-io-label]
+full_text=⚙
+separator=false
+separator_block_width=5
+[disk-io]
+markup=pango
+interval=persist
+command=~/repos/i3blocks-contrib/disk-io/disk-io -R /nvme0n1/
 
 [iface]
 color=#a6e22e
 interval=5
-separator=true
-
-[wifi]
-interval=5
 separator=false
+separator_block_width=10
+command=~/repos/i3blocks-contrib/iface/iface
+
+[essid]
+interval=5
+INTERFACE=wlp3s0
+command=~/repos/i3blocks-contrib/essid/essid
+
+[brightness-label]
+full_text=☀
+separator=false
+separator_block_width=5
+[brightness]
+interval=1
+separator=true
+command=~/repos/i3blocks-contrib/brightness/brightness
+
+[volume-label]
+full_text=♫
+separator=false
+separator_block_width=5
+[volume]
+instance=Master
+interval=1
+signal=10
+command=~/repos/i3blocks-contrib/volume/volume
+
+[battery-label]
+full_text=⚡
+separator=false
+separator_block_width=5
+[battery]
+interval=45
+command=~/.config/i3/scripts/battery-status.sh
 
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
 interval=1
+
+[ytdl-mpv]
+label=MPV
+command=~/repos/i3blocks-contrib/ytdl-mpv/ytdl-mpv
+markup=pango
+interval=once
+signal=4
+PLAYING_COLOR=red
+NOT_PLAYING_COLOR=white
 
